--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+derive-new = "0.7.0"
+env_logger = "0.11.8"
+log = "0.4.27"
+reqwest = { version = "0.12.19", features = ["blocking"] }
+simple_logger = "5.0.0"
