--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ anyhow = "1.0.98"
 derive-new = "0.7.0"
 env_logger = "0.11.8"
 log = "0.4.27"
+rayon = "1.10.0"
 reqwest = { version = "0.12.19", features = ["blocking"] }
 simple_logger = "5.0.0"
